--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,11 +1,11 @@
-@use "../../libs/normalize.css/normalize";
+@use '../../libs/normalize.css/normalize';
 
-@use "common";
-@use "components/header";
-@use "components/skills";
+@use 'common';
 
-// @use 'components/sections/section-about';
-// @use 'components/sections/section-form';
-// @use 'components/sections/section-posts';
+@use 'components/header';
 
-// @use 'components/footer/footer';
+@use 'components/skills';
+
+@use 'components/sections';
+
+@use 'components/footer';
