--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -1,5 +1,5 @@
-@use '../presets' as *;
-@use '../mixins' as *;
+@use "../presets" as *;
+@use "../mixins" as *;
 
 *,
 *::before,
@@ -22,6 +22,7 @@ body {
 h1 {
   text-align: center;
   letter-spacing: 0.08em;
+
   font-family: $font-header;
   font-weight: 300;
   line-height: 1.2em;
@@ -37,8 +38,66 @@ h1 {
   }
 }
 
+h2 {
+  margin-top: 0;
+
+  letter-spacing: 0.1em;
+
+  color: $color-primary;
+
+  font-family: $font-header;
+  font-weight: 700;
+  line-height: 1.2em;
+
+  @include lg-min {
+    margin-bottom: 3rem;
+
+    font-size: 2.5rem;
+  }
+  @include lg-md {
+    margin-bottom: 2.625rem;
+
+    font-size: 2rem;
+  }
+  @include md-sm {
+    margin-bottom: 2.25rem;
+
+    font-size: 1.5rem;
+  }
+  @include sm {
+    margin-bottom: 2.25rem;
+
+    text-align: center;
+
+    font-size: 1.5rem;
+  }
+}
+
+h3 {
+  text-align: center;
+  letter-spacing: 0.05em;
+
+  color: $color-gray;
+
+  font-size: 1.125rem;
+}
+
 a {
   text-decoration: none;
 
   color: $color-white;
+}
+img {
+  border-style: none;
+}
+p {
+  color: $color-gray;
+}
+
+img {
+  border-style: none;
+}
+
+p {
+  color: $color-gray;
 }
