--- a/assets/scss/components/sections/_section-about.scss
+++ b/assets/scss/components/sections/_section-about.scss
@@ -1,21 +1,20 @@
-@use '../../presets' as *;
-@use '../../mixins' as *;
+@use "../../presets" as *;
+@use "../../mixins" as *;
 
 .about {
   letter-spacing: 0.055em;
+
   background-color: $color-gray-light;
 
   @include lg-min {
     padding-top: $gap-x5;
     padding-bottom: $gap-x5;
   }
-
   @include lg-md {
     padding-top: $gap-x4;
     padding-bottom: $gap-x4;
   }
-
-  @include md-sm {
+  @include md {
     padding-top: $gap-x3;
     padding-bottom: $gap-x3;
   }
@@ -33,7 +32,7 @@
       grid-template-columns: 1fr 271px;
     }
     @include md-sm {
-      gap: $gap-x2;
+      gap: $gap;
       grid-template-columns: 1fr 236px;
     }
     @include sm {
@@ -41,6 +40,7 @@
       grid-template-columns: 1fr;
     }
   }
+
   &__content {
     p {
       @include lg-min {
@@ -50,15 +50,21 @@
 
     p:first-of-type {
       position: relative;
+
       margin-top: -5px;
     }
+
     p:first-of-type::after {
       position: absolute;
       top: 0;
+
       width: 2px;
       height: 200px;
-      content: '';
+
+      content: "";
+
       background-color: rgba($color-gray, 0.1);
+
       @include lg-min {
         right: -50px;
       }
@@ -72,6 +78,7 @@
         display: none;
       }
     }
+
     p:last-of-type {
       margin: 0;
     }
