--- a/assets/scss/presets/_skin.scss
+++ b/assets/scss/presets/_skin.scss
@@ -5,3 +5,7 @@ $color-gray: #637588;
 $color-gray-light: #e5e5e5;
 $color-gray-dark: #44596e;
 $color-white: #ffffff;
+$color-border: #707070;
+$color-placeholder: #8c9bab;
+$color-posts: #f2f2f2;
+$color-posts-accent: #d8d8d8;
