--- a/assets/scss/components/skills/_skills.scss
+++ b/assets/scss/components/skills/_skills.scss
@@ -35,7 +35,7 @@ $local-gap: math.div(40px, 3);
       gap: $gap-sm;
     }
     @include sm {
-      gap: $gap-sm;
+      gap: $gap;
       grid-template-areas: "a1" "a2" "a3" "a4" "a5" "a6" "a7" "a8" "a9";
     }
 
