--- a/assets/scss/components/sections/_section-form.scss
+++ b/assets/scss/components/sections/_section-form.scss
@@ -1,5 +1,5 @@
-@use '../../presets' as *;
-@use '../../mixins' as *;
+@use "../../presets" as *;
+@use "../../mixins" as *;
 
 .form {
   padding: $gap-lg 0;
@@ -21,6 +21,7 @@
 
   .btn--primary {
     width: 100%;
+
     color: $color-white;
     border-color: rgba($color-white, 0);
     border-bottom-color: rgba($color-white, 0.2);
