--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -1,5 +1,5 @@
-@use "../presets" as *;
-@use "../mixins" as *;
+@use '../presets' as *;
+@use '../mixins' as *;
 
 *,
 *::before,
@@ -9,7 +9,6 @@
 
 html {
   overflow-y: scroll;
-
   font-family: $font-main;
   font-size: $font-size;
 }
