create project grid template

--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -1,5 +1,5 @@
-@use '../presets' as *;
-@use '../mixins' as *;
+@use "../presets" as *;
+@use "../mixins" as *;
 
 *,
 *::before,
@@ -22,6 +22,7 @@ body {
 h1 {
   text-align: center;
   letter-spacing: 0.08em;
+
   font-family: $font-header;
   font-weight: 300;
   line-height: 1.2em;
